@@ -1,3 +1,8 @@
+2004-05-04  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* listbox.tcl (_keyboard_navigation): make sure you can see the
+	item that you key navigate to. (aas)
+
 2004-04-26  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tree.tcl (_update_nodes): align with _draw_nodes code,
